data/exec-logs/random/lumins_settlers-of-catan-games/logistic-regression-and-knn-predictors.exec.log
  File "logistic-regression-and-knn-predictors.py", line 233
    kf = KFold(n_splits=True), n_folds=10, shuffle=False)
                                                        ^
SyntaxError: invalid syntax
